<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="@drawable/fond_ecran">

    <ImageView
        android:id="@+id/param"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/parametres" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/casque"
        android:contentDescription="@string/logo_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/go_to_locate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/localisation"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/histo"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <Button
        android:id="@+id/histo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historique"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toEndOf="@+id/go_to_locate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>